<resources>
    <string name="app_name">Music</string>
    <string name="app_permissions_toast">Permissions not granted by the user.</string>
    <string name="visualizer_permissions_toast">Record audio permission is required for the visualizer.</string>
    <string name="request_status_error_type_unknown">Unknown</string>
    <string name="request_status_error_type_not_found">Not found</string>
    <string name="request_status_error_type_io">I/O error</string>
    <string name="request_status_error_type_authentication_required">Authentication required</string>
    <string name="request_status_error_type_invalid_credentials">Invalid credentials</string>
    <string name="main_fragment_section_activity">Activity</string>
    <string name="main_fragment_section_search">Search</string>
    <string name="main_fragment_section_library">Library</string>
    <string name="search_hint">Search…</string>
    <string name="library_fragment_menu_albums">Albums</string>
    <string name="library_fragment_menu_artists">Artists</string>
    <string name="library_fragment_menu_genres">Genres</string>
    <string name="library_fragment_menu_playlists">Playlists</string>
    <string name="create_playlist">Create new playlist</string>
    <string name="no_playlists_comma">No playlists,</string>
    <string name="create_playlist_suggestion">Create a new one?</string>
    <string name="create_playlist_confirm">Create</string>
    <string name="no_activity">No activity</string>
    <string name="no_albums">No albums</string>
    <string name="no_artists">No artists</string>
    <string name="no_genres">No genres</string>
    <string name="no_playlists">No playlists</string>
    <string name="no_audios">No audios</string>
    <string name="no_results">No results</string>
    <string name="shrug" translatable="false">¯\\_(ツ)_/¯</string>
    <string name="unknown">Unknown</string>
    <string name="album_unknown">Unknown album</string>
    <string name="artist_unknown">Unknown artist</string>
    <string name="genre_unknown">Unknown genre</string>
    <string name="year_format" translatable="false">%1$d</string>
    <plurals name="tracks_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <plurals name="tracks_duration">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="tracks_info" translatable="false">%1$s, %2$s</string>
    <string name="artist_albums_header">Albums</string>
    <string name="artist_appears_in_album_header">Appears in album</string>
    <string name="artist_appears_in_playlist_header">Appears in playlist</string>
    <string name="action_play">Play</string>
    <string name="audio_play_next">Play next</string>
    <string name="audio_add_to_queue">Add to queue</string>
    <string name="audio_remove_from_playlist">Remove from playlist</string>
    <string name="audio_add_or_remove_from_playlists">Add or remove from playlists</string>
    <string name="open_album">Open album</string>
    <string name="open_artist">Open artist</string>
    <string name="open_genre">Open genre</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="rename_playlist_positive">Rename</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_message">Are you sure you want to delete this playlist?</string>
    <string name="delete_playlist_positive">Delete</string>
    <string name="audio_effects">Audio effects</string>
    <string name="playback_speed">Playback speed</string>
    <string name="playback_speed_format">%1$s×</string>
    <string name="playback_pitch_slider_description">Playback pitch</string>
    <string name="playbacl_pitch_unlock">Unlock pitch change</string>
    <string name="playback_warning">Speed and pitch may not work correctly while playback offload feature is enabled. Try toggling it in the app\'s settings.</string>
    <string name="visualizer">Visualizer</string>
    <string name="audio_source">Source</string>
    <string name="audio_transcoding">Transcoding</string>
    <string name="audio_output">Output</string>
    <string name="audio_output_not_available_in_current_configuration">Output information are not available in current configuration</string>
    <string name="audio_file_type">File type</string>
    <string name="audio_file_type_unknown">Unknown</string>
    <string name="audio_sample_rate">Sample rate</string>
    <string name="audio_sample_rate_format">%1$s kHz</string>
    <string name="audio_sample_rate_unknown">Unknown</string>
    <string name="audio_channel_count">Channel count</string>
    <string name="audio_channel_count_unknown">Unknown</string>
    <string name="audio_encoding">Encoding</string>
    <string name="audio_encoding_unknown">Unknown</string>
    <string name="audio_float_mode">PCM float mode</string>
    <string name="audio_float_mode_unknown">Unknown</string>
    <string name="audio_float_mode_enabled">Enabled</string>
    <string name="audio_float_mode_disabled">Disabled</string>
    <string name="audio_output_mode">Output mode</string>
    <string name="audio_output_mode_unknown">Unknown</string>
    <string name="audio_output_mode_pcm">PCM</string>
    <string name="audio_output_mode_offload">Offload</string>
    <string name="audio_output_mode_passthrough">Passthrough</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="audio_bitrate_unknown">Unknown</string>
    <string name="audio_bitrate_format">%1$s kbps</string>
    <string name="provider_type_local">Local</string>
    <string name="provider_type_subsonic" translatable="false">Subsonic / OpenSubsonic / Navidrome</string>
    <string name="provider_type_jellyfin" translatable="false">Jellyfin</string>
    <string name="provider_argument_server">Server</string>
    <string name="provider_argument_username">Username</string>
    <string name="provider_argument_password">Password</string>
    <string name="provider_argument_use_legacy_authentication">Use legacy authentication</string>
    <string name="provider_argument_validation_error_required">A value is required</string>
    <string name="provider_argument_validation_error_malformed_http_uri">Must be a valid HTTP or HTTPS URL (e.g. https://google.com)</string>
    <string name="no_provider">No provider</string>
    <string name="providers">Providers</string>
    <string name="add_provider_action">Add</string>
    <string name="add_provider">Add provider</string>
    <string name="manage_provider">Manage provider</string>
    <string name="save_provider_action">Save</string>
    <string name="delete_provider_action">Delete</string>
    <string name="delete_provider_confirmation">Are you sure you want to delete this provider?</string>
    <string name="provider_name">Name</string>
    <string name="provider_name_error">Enter a name</string>
    <string name="provider_type">Provider type</string>
    <string name="provider_type_error">Select a provider type</string>
    <string name="argument_validation_error_title">Error</string>
    <string name="argument_validation_error_message">Error while parsing the following arguments:\n%1$s</string>
    <string name="argument_validation_error_item">%1$s: %2$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_header">General</string>
    <string name="experimental_header">Experimental</string>
    <string name="enable_offload">Enable offload</string>
    <string name="enable_offload_summary">Use the offload audio path for audio playback. Disabling this may increase power usage but can be useful if you experience issues with audio playback or post processing</string>
    <string name="enable_float_output">Enable 32-bit floating point output</string>
    <string name="enable_float_output_summary">Use 32-bit PCM floating point output when the audio quality can benefit from it. Audio effects like speed and pitch controls will stop working in this mode. Toggling this option requires an app restart</string>
    <string name="stop_playback_on_task_removed">Stop playback on app\'s removal from recents</string>
    <string name="stop_playback_on_task_removed_summary">Stop playback when the app is cleared from recents</string>
    <string name="skip_silence">Skip silence</string>
    <string name="skip_silence_summary">Skip silence when playing audio</string>
    <string name="split_local_devices">Split local devices</string>
    <string name="split_local_devices_summary">If enabled, internal storage and external devices (SD cards, USB devices, etc.) will appear under different providers</string>
    <string name="now_playing_widget_description">Now playing</string>
    <string name="now_playing_widget_dummy_title">Title</string>
    <string name="now_playing_widget_dummy_artist">Artist</string>
    <string name="now_playing_widget_dummy_album">Album</string>
    <string name="album_disc_header">Disc %1$d</string>
    <string name="track_number" translatable="false">%1$d</string>
    <string name="genre_appears_in_albums_header">Appears in albums</string>
    <string name="genre_appears_in_playlists_header">Appears in playlists</string>
    <string name="genre_audios_header">Audios</string>
    <string name="queue">Queue</string>
    <string name="sort_by_artist_name">Artist name</string>
    <string name="sort_by_creation_date">Created at</string>
    <string name="sort_by_last_modified">Last modified</string>
    <string name="sort_by_last_activity">Last activity</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_play_count">Play count</string>
    <string name="sort_by_release_date">Release date</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_unknown">Unknown</string>
    <string name="activity_last_played">Last played</string>
    <string name="activity_most_played_albums">Most played albums</string>
    <string name="activity_random_albums">Random albums</string>
    <string name="activity_random_artists">Random artists</string>
    <string name="activity_random_genres">Random genres</string>
    <string name="activity_random_songs">Random songs</string>
    <string name="content_description_play_pause">Play/pause</string>
    <string name="content_description_thumbnail">Thumbnail</string>
    <string name="play_all">Play all</string>
    <string name="library_item_no_permissions">No permissions</string>
    <string name="library_item_no_permissions_description">The app doesn\'t have the necessary permissions</string>
    <string name="library_item_albums">Albums</string>
    <string name="library_item_artists">Artists</string>
    <string name="library_item_genres">Genres</string>
    <string name="library_item_playlists">Playlists</string>
    <string name="library_item_change_provider">Change provider</string>
    <string name="library_item_provider_changed">Provider changed, go back to main menu</string>
</resources>